# High-performance-programming-on-Integrated-Graphic-card-using-OpenCL

./: README.md
Ex_2/: README.txt
Ex_2/Exercise2/: CMakeLists.txt  CMakeLists.txt~
Ex_2/Exercise2/src/: OpenCLExercise2_Mandelbrot.cl  OpenCLExercise2_Mandelbrot.cpp  OpenCLExercise2_Mandelbrot.cpp~
Ex_3/: CMakeLists.txt
Ex_3/src/: OpenCLExercise3_Sobel.cl  OpenCLExercise3_Sobel.cpp
Ex_4/OpenCL/: Error.cpp
Ex_4/src/: OpenCLExercise4_MatrixMultiplication.cpp
Ex_5/OpenCLExercise5_PrefixSum/: CMakeLists.txt
Ex_5/OpenCLExercise5_PrefixSum/src/: OpenCLExercise6_PrefixSum.cpp
Ex_5/src/: OpenCLExercise6_PrefixSum.cl
Ex_6/: README.txt
Ex_6/Opencl-exercise-windows/: CMakeLists.txt  cpp.hint
Ex_6/Opencl-exercise-windows/Core/: Util.hpp
Ex_6/Opencl-exercise-windows/HDF5/: Array.hpp  BaseTypes.cpp  ComplexConversion.cpp  CompoundType.cpp  DataSpace.cpp  DataType.hpp  DataTypes.hpp  Exception.hpp  Matlab.cpp  Object.cpp  PropList.cpp
Ex_6/Opencl-exercise-windows/Math/: Abs.hpp  DiagMatrix3.hpp  Forward.hpp  Vector2.hpp  Vector3.hpp
Ex_6/Opencl-exercise-windows/src/: OpenCLExercise6_VolumeRendering.cl  OpenCLExercise6_VolumeRendering.cpp
Ex_6/hdf/: README.txt
